infra/k3s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qantam-prod
  labels:
    environment: production
